fix class help ✔ and insert img 01_values

--- a/html/02_program_structure.html
+++ b/html/02_program_structure.html
@@ -7,7 +7,7 @@
       var page = {"type":"chapter","number":2}</script></head>
 
 <article>
-<nav><a href="01_values.html" title="previous chapter" aria-label="previous chapter">◂</a> <a href="index.html" title="cover" aria-label="cover">●</a> <a href="03_functions.html" title="next chapter" aria-label="next chapter">▸</a>&nbsp;<button class=help title="help" aria-label="help"><strong>?</strong></button>
+<nav><a href="01_values.html" title="previous chapter" aria-label="previous chapter">◂</a> <a href="index.html" title="cover" aria-label="cover">●</a> <a href="03_functions.html" title="next chapter" aria-label="next chapter">▸</a>&nbsp;<button class="help" title="help" aria-label="help"><strong>?</strong></button>
 </nav>
 
 <h1>Estructura del Programa</h1>
