--- a/html/08_error.html
+++ b/html/08_error.html
@@ -7,7 +7,7 @@
       var page = {"type":"chapter","number":8,"load_files":["code/chapter/08_error.js"]}</script></head>
 
 <article>
-<nav><a href="07_robot.html" title="previous chapter" aria-label="previous chapter">◂</a> <a href="index.html" title="cover" aria-label="cover">●</a> <a href="09_regexp.html" title="next chapter" aria-label="next chapter">▸</a>&nbsp;<button class=help title="help" aria-label="help"><strong>?</strong></button>
+<nav><a href="07_robot.html" title="previous chapter" aria-label="previous chapter">◂</a> <a href="index.html" title="cover" aria-label="cover">●</a> <a href="09_regexp.html" title="next chapter" aria-label="next chapter">▸</a>&nbsp;<button class="help" title="help" aria-label="help"><strong>?</strong></button>
 </nav>
 
 <h1>Bugs y Errores</h1>
