--- a/html/12_language.html
+++ b/html/12_language.html
@@ -7,7 +7,7 @@
       var page = {"type":"chapter","number":12,"load_files":["code/chapter/12_language.js"]}</script></head>
 
 <article>
-<nav><a href="11_async.html" title="previous chapter" aria-label="previous chapter">◂</a> <a href="index.html" title="cover" aria-label="cover">●</a> <a href="13_browser.html" title="next chapter" aria-label="next chapter">▸</a>&nbsp;<button class=help title="help" aria-label="help"><strong>?</strong></button>
+<nav><a href="11_async.html" title="previous chapter" aria-label="previous chapter">◂</a> <a href="index.html" title="cover" aria-label="cover">●</a> <a href="13_browser.html" title="next chapter" aria-label="next chapter">▸</a>&nbsp;<button class="help" title="help" aria-label="help"><strong>?</strong></button>
 </nav>
 
 <h1>Proyecto: Un Lenguaje de Programación</h1>
