--- a/html/21_skillsharing.html
+++ b/html/21_skillsharing.html
@@ -7,7 +7,7 @@
       var page = {"type":"chapter","number":21}</script></head>
 
 <article>
-<nav><a href="20_node.html" title="previous chapter" aria-label="previous chapter">◂</a> <a href="index.html" title="cover" aria-label="cover">●</a>&nbsp;<button class=help title="help" aria-label="help"><strong>?</strong></button>
+<nav><a href="20_node.html" title="previous chapter" aria-label="previous chapter">◂</a> <a href="index.html" title="cover" aria-label="cover">●</a>&nbsp;<button class="help" title="help" aria-label="help"><strong>?</strong></button>
 </nav>
 
 <h1>Proyecto: Sitio web de intercambio de habilidades</h1>
