--- a/html/00_intro.html
+++ b/html/00_intro.html
@@ -7,7 +7,7 @@
       var page = {"type":"chapter","number":0,"load_files":["code/intro.js"]}</script></head>
 
 <article>
-<nav><a href="index.html" title="cover" aria-label="cover">●</a> <a href="01_values.html" title="next chapter" aria-label="next chapter">▸</a>&nbsp;<button class=help title="help" aria-label="help"><strong>?</strong></button>
+<nav><a href="index.html" title="cover" aria-label="cover">●</a> <a href="01_values.html" title="next chapter" aria-label="next chapter">▸</a>&nbsp;<button class="help" title="help" aria-label="help"><strong>?</strong></button>
 </nav>
 
 <h1>Introducción</h1>
