--- a/html/09_regexp.html
+++ b/html/09_regexp.html
@@ -7,7 +7,7 @@
       var page = {"type":"chapter","number":9}</script></head>
 
 <article>
-<nav><a href="08_error.html" title="previous chapter" aria-label="previous chapter">◂</a> <a href="index.html" title="cover" aria-label="cover">●</a> <a href="10_modules.html" title="next chapter" aria-label="next chapter">▸</a>&nbsp;<button class=help title="help" aria-label="help"><strong>?</strong></button>
+<nav><a href="08_error.html" title="previous chapter" aria-label="previous chapter">◂</a> <a href="index.html" title="cover" aria-label="cover">●</a> <a href="10_modules.html" title="next chapter" aria-label="next chapter">▸</a>&nbsp;<button class="help" title="help" aria-label="help"><strong>?</strong></button>
 </nav>
 
 <h1>Expresiones regulares</h1>
