--- a/html/13_browser.html
+++ b/html/13_browser.html
@@ -7,7 +7,7 @@
       var page = {"type":"chapter","number":13}</script></head>
 
 <article>
-<nav><a href="12_language.html" title="previous chapter" aria-label="previous chapter">◂</a> <a href="index.html" title="cover" aria-label="cover">●</a> <a href="14_dom.html" title="next chapter" aria-label="next chapter">▸</a>&nbsp;<button class=help title="help" aria-label="help"><strong>?</strong></button>
+<nav><a href="12_language.html" title="previous chapter" aria-label="previous chapter">◂</a> <a href="index.html" title="cover" aria-label="cover">●</a> <a href="14_dom.html" title="next chapter" aria-label="next chapter">▸</a>&nbsp;<button class="help" title="help" aria-label="help"><strong>?</strong></button>
 </nav>
 
 <h1>JavaScript y el Navegador</h1>
