--- a/html/16_game.html
+++ b/html/16_game.html
@@ -7,7 +7,7 @@
       var page = {"type":"chapter","number":16}</script></head>
 
 <article>
-<nav><a href="15_event.html" title="previous chapter" aria-label="previous chapter">◂</a> <a href="index.html" title="cover" aria-label="cover">●</a> <a href="17_canvas.html" title="next chapter" aria-label="next chapter">▸</a>&nbsp;<button class=help title="help" aria-label="help"><strong>?</strong></button>
+<nav><a href="15_event.html" title="previous chapter" aria-label="previous chapter">◂</a> <a href="index.html" title="cover" aria-label="cover">●</a> <a href="17_canvas.html" title="next chapter" aria-label="next chapter">▸</a>&nbsp;<button class="help" title="help" aria-label="help"><strong>?</strong></button>
 </nav>
 
 <h1>Proyecto: Un juego de plataformas</h1>
