--- a/html/19_paint.html
+++ b/html/19_paint.html
@@ -7,7 +7,7 @@
       var page = {"type":"chapter","number":19}</script></head>
 
 <article>
-<nav><a href="18_http.html" title="previous chapter" aria-label="previous chapter">◂</a> <a href="index.html" title="cover" aria-label="cover">●</a> <a href="20_node.html" title="next chapter" aria-label="next chapter">▸</a>&nbsp;<button class=help title="help" aria-label="help"><strong>?</strong></button>
+<nav><a href="18_http.html" title="previous chapter" aria-label="previous chapter">◂</a> <a href="index.html" title="cover" aria-label="cover">●</a> <a href="20_node.html" title="next chapter" aria-label="next chapter">▸</a>&nbsp;<button class="help" title="help" aria-label="help"><strong>?</strong></button>
 </nav>
 
 <h1>Proyecto: Editor de Arte Pixelado</h1>
