--- a/html/20_node.html
+++ b/html/20_node.html
@@ -7,7 +7,7 @@
       var page = {"type":"chapter","number":20}</script></head>
 
 <article>
-<nav><a href="19_paint.html" title="previous chapter" aria-label="previous chapter">◂</a> <a href="index.html" title="cover" aria-label="cover">●</a> <a href="21_skillsharing.html" title="next chapter" aria-label="next chapter">▸</a>&nbsp;<button class=help title="help" aria-label="help"><strong>?</strong></button>
+<nav><a href="19_paint.html" title="previous chapter" aria-label="previous chapter">◂</a> <a href="index.html" title="cover" aria-label="cover">●</a> <a href="21_skillsharing.html" title="next chapter" aria-label="next chapter">▸</a>&nbsp;<button class="help" title="help" aria-label="help"><strong>?</strong></button>
 </nav>
 
 <h1>Node.js</h1>
