--- a/html/10_modules.html
+++ b/html/10_modules.html
@@ -276,7 +276,9 @@ console.log(find_path(graph, <span class="tok-string">&quot;Oficina de Correos&q
 
 <p><a class="p_ident" id="p-m3mSugxkL/" href="#p-m3mSugxkL/" tabindex="-1" role="presentation"></a>{{index diseño}}</p>
 
-<p><a class="p_ident" id="p-IDgnEL9ZDX" href="#p-IDgnEL9ZDX" tabindex="-1" role="presentation"></a>Diseñar una estructura de módulo adecuada para un programa puede ser difícil. En la fase en la que aún estás explorando el problema, probando diferentes cosas para ver qué funciona, es posible que no quieras preocuparte demasiado por esto, ya que mantener todo organizado puede ser una gran distracción. Una vez que tengas algo que se sienta sólido, es un buen momento para dar un paso atrás y organizarlo.## Resumen</p>
+<p><a class="p_ident" id="p-eCjSAo88Cd" href="#p-eCjSAo88Cd" tabindex="-1" role="presentation"></a>Diseñar una estructura de módulo adecuada para un programa puede ser difícil. En la fase en la que aún estás explorando el problema, probando diferentes cosas para ver qué funciona, es posible que no quieras preocuparte demasiado por esto, ya que mantener todo organizado puede ser una gran distracción. Una vez que tengas algo que se sienta sólido, es un buen momento para dar un paso atrás y organizarlo.</p>
+
+<h2><a class="h_ident" id="h-NUFOUyK+lw" href="#h-NUFOUyK+lw" tabindex="-1" role="presentation"></a>Resumen</h2>
 
 <p><a class="p_ident" id="p-XvXDONU/Vc" href="#p-XvXDONU/Vc" tabindex="-1" role="presentation"></a>Los módulos proporcionan estructura a programas más grandes al separar el código en piezas con interfaces claras y dependencias. La interfaz es la parte del módulo que es visible para otros módulos, y las dependencias son los otros módulos que se utilizan.</p>
 
