--- a/html/13_browser.html
+++ b/html/13_browser.html
@@ -18,11 +18,9 @@
 
 <footer>Tim Berners-Lee, <cite>La World Wide Web: Una historia personal muy breve</cite></footer>
 
-</blockquote><figure class="chapter enmarcada"><img src="img/chapter_picture_13.jpg" alt="Ilustración que muestra una central telefónica"></figure>
+</blockquote><figure class="chapter framed"><img src="img/chapter_picture_13.jpg" alt="Ilustración que muestra una central telefónica"></figure>
 
 <p><a class="p_ident" id="p-5mbmb1PwCH" href="#p-5mbmb1PwCH" tabindex="-1" role="presentation"></a>Los próximos capítulos de este libro hablarán sobre los navegadores web. Sin los navegadores web, no habría JavaScript. O incluso si existiera, nadie le habría prestado atención.</p>
-
-<p><a class="p_ident" id="p-gSo7YegiCI" href="#p-gSo7YegiCI" tabindex="-1" role="presentation"></a>{{index descentralización, compatibilidad}}</p>
 
 <p><a class="p_ident" id="p-an+O4Rstt4" href="#p-an+O4Rstt4" tabindex="-1" role="presentation"></a>La tecnología web ha sido descentralizada desde el principio, no solo técnicamente, sino también en la forma en que evolucionó. Varios fabricantes de navegadores han añadido nueva funcionalidad de manera ad hoc y a veces sin mucho sentido, que luego, a veces, terminaba siendo adoptada por otros, y finalmente establecida como en los estándares.</p>
 
@@ -130,9 +128,9 @@
 
 <p><a class="p_ident" id="p-H9u9IuMfoH" href="#p-H9u9IuMfoH" tabindex="-1" role="presentation"></a>Este libro generalmente omitirá las etiquetas <code>&lt;html&gt;</code>, <code>&lt;head&gt;</code> y <code>&lt;body&gt;</code> en ejemplos para mantenerlos cortos y libres de desorden. Pero <em>sí</em> cerraré las etiquetas e incluiré comillas alrededor de los atributos.</p>
 
-<p><a class="p_ident" id="p-JOVEO4pXiL" href="#p-JOVEO4pXiL" tabindex="-1" role="presentation"></a>También generalmente omitiré el doctype y la declaración <code>charset</code>. Esto no debe interpretarse como una recomendación para omitirlos de documentos HTML. Los navegadores a menudo hacen cosas ridículas cuando los olvidas. Deberías considerar que el doctype y los metadatos del <code>charset</code> están implícitamente presentes en los ejemplos, incluso cuando no se muestran realmente en el texto.{{id script_tag}}</p>
+<p><a class="p_ident" id="p-YmufKuQA2D" href="#p-YmufKuQA2D" tabindex="-1" role="presentation"></a>También generalmente omitiré el doctype y la declaración <code>charset</code>. Esto no debe interpretarse como una recomendación para omitirlos de documentos HTML. Los navegadores a menudo hacen cosas ridículas cuando los olvidas. Deberías considerar que el doctype y los metadatos del <code>charset</code> están implícitamente presentes en los ejemplos, incluso cuando no se muestran realmente en el texto.</p>
 
-<h2><a class="h_ident" id="h-MAYmG7Zxt0" href="#h-MAYmG7Zxt0" tabindex="-1" role="presentation"></a>HTML y JavaScript</h2>
+<h2 id="script_tag"><a class="h_ident" id="h-MAYmG7Zxt0" href="#h-MAYmG7Zxt0" tabindex="-1" role="presentation"></a>HTML y JavaScript</h2>
 
 <p><a class="p_ident" id="p-XEPbDDUDCO" href="#p-XEPbDDUDCO" tabindex="-1" role="presentation"></a>En el contexto de este libro, la etiqueta HTML más importante es <code>&lt;script&gt;</code>. Esta etiqueta nos permite incluir un fragmento de JavaScript en un documento.</p>
 
