--- a/html/16_game.html
+++ b/html/16_game.html
@@ -38,7 +38,9 @@
 
 <p><a class="p_ident" id="p-Zb7oGD9ajn" href="#p-Zb7oGD9ajn" tabindex="-1" role="presentation"></a>{{index “número fraccionario”, discretización, “vida artificial”, “vida electrónica”}}</p>
 
-<p><a class="p_ident" id="p-Nod/FlAYDz" href="#p-Nod/FlAYDz" tabindex="-1" role="presentation"></a>El juego consiste en un fondo estático, dispuesto como una rejilla, con los elementos móviles superpuestos en ese fondo. Cada campo en la rejilla está vacío, sólido o es lava. Los elementos móviles son el jugador, las monedas y ciertas piezas de lava. Las posiciones de estos elementos no están restringidas a la rejilla: sus coordenadas pueden ser fraccionarias, permitiendo un movimiento suave.## La tecnología</p>
+<p><a class="p_ident" id="p-wU7P212JRH" href="#p-wU7P212JRH" tabindex="-1" role="presentation"></a>El juego consiste en un fondo estático, dispuesto como una rejilla, con los elementos móviles superpuestos en ese fondo. Cada campo en la rejilla está vacío, sólido o es lava. Los elementos móviles son el jugador, las monedas y ciertas piezas de lava. Las posiciones de estos elementos no están restringidas a la rejilla: sus coordenadas pueden ser fraccionarias, permitiendo un movimiento suave.</p>
+
+<h2><a class="h_ident" id="h-LCW090OGxh" href="#h-LCW090OGxh" tabindex="-1" role="presentation"></a>La tecnología</h2>
 
 <p><a class="p_ident" id="p-+veB6d/KdW" href="#p-+veB6d/KdW" tabindex="-1" role="presentation"></a>{{index “manejo de eventos”, teclado, [DOM, gráficos]}}</p>
 
