--- a/html/19_paint.html
+++ b/html/19_paint.html
@@ -96,7 +96,9 @@
   <span class="tok-keyword">return</span> {...state, ...action};
 }</pre>
 
-<p><a class="p_ident" id="p-/Fw2Fa3jsr" href="#p-/Fw2Fa3jsr" tabindex="-1" role="presentation"></a>Este patrón, en el que el operador de spread de objetos se utiliza primero para agregar las propiedades de un objeto existente y luego para anular algunas de ellas, es común en el código de JavaScript que utiliza objetos inmutables.## Construcción del DOM</p>
+<p><a class="p_ident" id="p-678T3CZ7jd" href="#p-678T3CZ7jd" tabindex="-1" role="presentation"></a>Este patrón, en el que el operador de spread de objetos se utiliza primero para agregar las propiedades de un objeto existente y luego para anular algunas de ellas, es común en el código de JavaScript que utiliza objetos inmutables.</p>
+
+<h2><a class="h_ident" id="h-PQ3ktBTXal" href="#h-PQ3ktBTXal" tabindex="-1" role="presentation"></a>Construcción del DOM</h2>
 
 <p><a class="p_ident" id="p-vuJf3R2ug2" href="#p-vuJf3R2ug2" tabindex="-1" role="presentation"></a>{{index “método <code>createElement</code>”, “función <code>elt</code>”, [DOM, construcción]}}</p>
 
