--- a/html/17_canvas.html
+++ b/html/17_canvas.html
@@ -181,9 +181,7 @@ circle.setAttribute(<span class="tok-string">&quot;fill&quot;</span>, <span clas
   cx.stroke();
 &lt;/<span class="tok-typeName">script</span>&gt;</pre>
 
-<p><a class="p_ident" id="p-Jauu6uWQDK" href="#p-Jauu6uWQDK" tabindex="-1" role="presentation"></a>Los dos puntos de control especifican la dirección en ambos extremos de la curva. Cuanto más separados estén de su punto correspondiente, más la curva “abultará&quot; en esa dirección.{{if book</p><figure><img src="img/canvas_beziercurve.png" alt="Captura de pantalla de una curva de Bezier"></figure>
-
-<p><a class="p_ident" id="p-lY9X9X1yow_1" href="#p-lY9X9X1yow_1" tabindex="-1" role="presentation"></a>if}}</p>
+<p><a class="p_ident" id="p-nzyix6jR0u" href="#p-nzyix6jR0u" tabindex="-1" role="presentation"></a>Los dos puntos de control especifican la dirección en ambos extremos de la curva. Cuanto más separados estén de su punto correspondiente, más la curva “abultará&quot; en esa dirección.</p>
 
 <p><a class="p_ident" id="p-tELXhF/ylX" href="#p-tELXhF/ylX" tabindex="-1" role="presentation"></a>curves como estas pueden ser difíciles de trabajar, no siempre es claro cómo encontrar los control points que proporcionan la forma que estás buscando. A veces puedes calcularlos y a veces simplemente tendrás que encontrar un valor adecuado mediante prueba y error.</p>
 
@@ -734,7 +732,7 @@ CanvasDisplay.prototype.drawPlayer = <span class="tok-keyword">function</span>(<
 
 <h3><a class="i_ident" id="i-V/3ulxW65J" href="#i-V/3ulxW65J" tabindex="-1" role="presentation"></a>Una pelota rebotando</h3>
 
-<p><a class="p_ident" id="p-Ys7YdkYJ8S" href="#p-Ys7YdkYJ8S" tabindex="-1" role="presentation"></a>Utiliza la técnica de <code>requestAnimationFrame</code> que vimos en <a href="14_dom.html#animationFrame">Capítulo 14</a> y <a href="16_game.html#runAnimation">Capítulo 16</a> para dibujar una caja con una pelota rebotando dentro. La pelota se mueve a una velocidad constante y rebota en los lados de la caja cuando los alcanza.{{if interactive</p>
+<p><a class="p_ident" id="p-E0rF74dj7i" href="#p-E0rF74dj7i" tabindex="-1" role="presentation"></a>Utiliza la técnica de <code>requestAnimationFrame</code> que vimos en <a href="14_dom.html#animationFrame">Capítulo 14</a> y <a href="16_game.html#runAnimation">Capítulo 16</a> para dibujar una caja con una pelota rebotando dentro. La pelota se mueve a una velocidad constante y rebota en los lados de la caja cuando los alcanza.</p>
 
 <pre tabindex="0" class="snippet" data-language="html" ><a class="c_ident" id="c-gdyoJV+nv2" href="#c-gdyoJV+nv2" tabindex="-1" role="presentation"></a>&lt;<span class="tok-typeName">canvas</span> width=<span class="tok-string">&quot;400&quot;</span> height=<span class="tok-string">&quot;400&quot;</span>&gt;&lt;/<span class="tok-typeName">canvas</span>&gt;
 &lt;<span class="tok-typeName">script</span>&gt;
